fixed image links

--- a/about.html
+++ b/about.html
@@ -20,16 +20,16 @@
 		  </section>
     </nav>
     <header>
-      <img class="profilepic" src="images/madi.png" alt="Madeline Guman's face">
+      <img class="profilepic" src="profilepic.png" alt="Madeline Guman's face">
       <h1><span class="aboutheader">All About Me!</span></h1>
     </header>
     <main>
       <section class="art">
-        <img class="leftimage" src="images/artmadi.png" alt="Madi wearing a red, white, and blue shirt holding a paintbrush to a piece of paper">
+        <img class="leftimage" src="artpic.png" alt="Madi wearing a red, white, and blue shirt holding a paintbrush to a piece of paper">
         <p>Art has been a part of my life since the very beginning. Art is therapeutic. It is interactive. It is stimulating. It takes practice and discipline. Art helps me see the world differently.</p>
       </section>
       <section class="dance">
-        <img class="rightimage" src="images/dancemadi.png" alt="Madi hanging upside down from blue silks">
+        <img class="rightimage" src="aerialpic.png" alt="Madi hanging upside down from blue silks">
         <p>Physical fitness is important to me! Keeping a healthy body allows for a healthy mind. Dance--another form of art in my opinion--is a form of self-expression like no other. Dance helps me relieve stress and literally keeps me on my toes so that I am at my best every day.</p>
       </section>
       <section class="web">
@@ -38,11 +38,11 @@
       </section>
     </main>
     <footer>
-      <img src="icons/email.png" alt="email icon">
-      <img src="icons/github.png" alt="git hub icon">
-      <img src="icons/instagram.png" alt="instagram icon">
-      <img src="icons/linkedin.png" alt="linked in icon">
-      <img src="icons/phone.png" alt="phone icon">
+      <img src="emailicon.png" alt="email icon">
+        <img src="githubicon.png" alt="git hub icon">
+        <img src="nstagramicon.png" alt="instagram icon">
+        <img src="linkedinicon.png" alt="linked in icon">
+        <img src="phoneicon.png" alt="phone icon">
     </footer>
   </body>
 </html>
