--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
 	    </section>
     </nav>
     <header>
-      <img class="profilepic" src="images/madi.png" alt="Madeline Guman's face">
+      <img class="profilepic" src="profilepic.png" alt="Madeline Guman's face">
       <h1><span class="contactheader">Contact Me!</span></h1>
     </header>
     <section class="contactform">
@@ -39,11 +39,11 @@
         </form>
     </section>
     <footer>
-        <img src="icons/email.png" alt="email icon">
-        <img src="icons/github.png" alt="git hub icon">
-        <img src="icons/instagram.png" alt="instagram icon">
-        <img src="icons/linkedin.png" alt="linked in icon">
-        <img src="icons/phone.png" alt="phone icon">
+        <img src="emailicon.png" alt="email icon">
+        <img src="githubicon.png" alt="git hub icon">
+        <img src="nstagramicon.png" alt="instagram icon">
+        <img src="linkedinicon.png" alt="linked in icon">
+        <img src="phoneicon.png" alt="phone icon">
     </footer>
   </body>
 </html>
