--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 		  </section>
     </nav>
     <header>
-      <img class="profilepic" src="images/madi.png" alt="Madeline Guman's face">
-      <img class="graphic" src="images/bubbles.png" alt="pink, purple, and blue circles">
+      <img class="profilepic" src="profilepic.png" alt="Madeline Guman's face">
+      <img class="graphic" src="bubbles.png" alt="pink, purple, and blue circles">
     </header>
     <main>
       <section class="bio">
@@ -30,22 +30,22 @@
       </section>
       <section class="work">
         <h2>My Work</h2>
-        <a href="???" class="example">
+        <a href="/work.html" class="example">
           <h3>Web</h3>
-          <img class="exampleimage" src="images/quizapp.png" alt="Finn and Jake fist bumping">
+          <img class="exampleimage" src="quizapp.png" alt="Finn and Jake fist bumping">
         </a>
-        <a href="???" class="example">
+        <a href="/work.html" class="example">
           <h3>Illustration and Photoshop</h3>
-          <img class="exampleimage" src="images/toucan.jpg" alt="geometric toucan">
+          <img class="exampleimage" src="toucan.jpg" alt="geometric toucan">
         </a>
       </section>
     </main>
     <footer>
-      <img src="icons/email.png" alt="email icon">
-      <img src="icons/github.png" alt="git hub icon">
-      <img src="icons/instagram.png" alt="instagram icon">
-      <img src="icons/linkedin.png" alt="linked in icon">
-      <img src="icons/phone.png" alt="phone icon">
+      <img src="emailicon.png" alt="email icon">
+        <img src="githubicon.png" alt="git hub icon">
+        <img src="nstagramicon.png" alt="instagram icon">
+        <img src="linkedinicon.png" alt="linked in icon">
+        <img src="phoneicon.png" alt="phone icon">
     </footer>
   </body>
 </html>
