--- a/work.html
+++ b/work.html
@@ -19,14 +19,14 @@
 		  </section>
     </nav>
     <header>
-      <img class="profilepic" src="images/madi.png" alt="Madeline Guman's face">
+      <img class="profilepic" src="profilepic.png" alt="Madeline Guman's face">
       <h1><span class="workheader">Check out my work!</span></h1>
     </header>
     <main>
       <section class="web">
         <h2>Websites and Applications</h2>
         <h3>Adventure Time Online Quiz</h3>
-        <img src="images/quizappscreencap.png" alt="screencap of Adventure Time quiz application - princesses in a cage">
+        <img src="quizappscreencap.png" alt="screencap of Adventure Time quiz application - princesses in a cage">
         <p>This interative web application is a game in which the user must answer questions in order to rescue the princesses of Ooo, the fictional kingdom of the cartoon's universe. Upon submission, users are provided with textual and graphic feedback as well as an interactive element (a button) that allows them to move on to the next question. At the end of the quiz, there are three possible outcomes a user may achieve depending on the number of questions they got right.</p>
         <p>This project uses HTML, CSS, JavaScript, and jQuery.</p>
         <p><a class="ghlink" href="https://github.com/mads890/ADVENTURE-TIME-Quiz-App">Check out my repository</a> on GitHub, or <a class="pageslink" href="https://mads890.github.io/ADVENTURE-TIME-Quiz-App/">try the live app yourself</a>!
@@ -38,11 +38,11 @@
       </section>
     </main>
     <footer>
-      <img src="icons/email.png" alt="email icon">
-      <img src="icons/github.png" alt="git hub icon">
-      <img src="icons/instagram.png" alt="instagram icon">
-      <img src="icons/linkedin.png" alt="linked in icon">
-      <img src="icons/phone.png" alt="phone icon">
+      <img src="emailicon.png" alt="email icon">
+        <img src="githubicon.png" alt="git hub icon">
+        <img src="nstagramicon.png" alt="instagram icon">
+        <img src="linkedinicon.png" alt="linked in icon">
+        <img src="phoneicon.png" alt="phone icon">
     </footer>
   </body>
 </html>
