added more images

--- a/work.html
+++ b/work.html
@@ -34,7 +34,13 @@
       <section class="graphics">
         <h2>Graphic Design</h2>
         <h3>Logos</h3>
+        <img src="hulselogo.png" alt="Orange and blue stacked letter H">
+        <img src="journeytowellnesslogo.svg" alt="blue circle with waves inside. text reads 'journey to wellness'">
+        <img src="workflologo.png" alt="dark blue metallic circle with neon pink letter W and neon blue letter F">
         <h3>Concept Art</h3>
+        <img src="toucan.jpg" alt="geometric toucan">
+        <img src="frog.jpg" alt="geometric dart frog">
+        <img src="lemur.jpg" alt="geometric lemur">
       </section>
     </main>
     <footer>
