fixed images pt2

--- a/about.html
+++ b/about.html
@@ -25,11 +25,11 @@
     </header>
     <main>
       <section class="art">
-        <img class="leftimage" src="artpic.png" alt="Madi wearing a red, white, and blue shirt holding a paintbrush to a piece of paper">
+        <img class="leftimage" src="artpic.jpeg" alt="Madi wearing a red, white, and blue shirt holding a paintbrush to a piece of paper">
         <p>Art has been a part of my life since the very beginning. Art is therapeutic. It is interactive. It is stimulating. It takes practice and discipline. Art helps me see the world differently.</p>
       </section>
       <section class="dance">
-        <img class="rightimage" src="aerialpic.png" alt="Madi hanging upside down from blue silks">
+        <img class="rightimage" src="aerialpic.jpeg" alt="Madi hanging upside down from blue silks">
         <p>Physical fitness is important to me! Keeping a healthy body allows for a healthy mind. Dance--another form of art in my opinion--is a form of self-expression like no other. Dance helps me relieve stress and literally keeps me on my toes so that I am at my best every day.</p>
       </section>
       <section class="web">
