--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </nav>
     <header>
       <img class="profilepic" src="profilepic.png" alt="Madeline Guman's face">
-      <img class="graphic" src="bubbles.png" alt="pink, purple, and blue circles">
+      <img class="graphic" src="bubbles.jpeg" alt="pink, purple, and blue circles">
     </header>
     <main>
       <section class="bio">
@@ -36,7 +36,7 @@
         </a>
         <a href="/work.html" class="example">
           <h3>Illustration and Photoshop</h3>
-          <img class="exampleimage" src="toucan.jpg" alt="geometric toucan">
+          <img class="exampleimage" src="toucan.jpeg" alt="geometric toucan">
         </a>
       </section>
     </main>
