--- a/work.html
+++ b/work.html
@@ -26,7 +26,7 @@
       <section class="web">
         <h2>Websites and Applications</h2>
         <h3>Adventure Time Online Quiz</h3>
-        <img src="quizappscreencap.png" alt="screencap of Adventure Time quiz application - princesses in a cage">
+        <img src="quizappscreencap.jpeg" alt="screencap of Adventure Time quiz application - princesses in a cage">
         <p>This interative web application is a game in which the user must answer questions in order to rescue the princesses of Ooo, the fictional kingdom of the cartoon's universe. Upon submission, users are provided with textual and graphic feedback as well as an interactive element (a button) that allows them to move on to the next question. At the end of the quiz, there are three possible outcomes a user may achieve depending on the number of questions they got right.</p>
         <p>This project uses HTML, CSS, JavaScript, and jQuery.</p>
         <p><a class="ghlink" href="https://github.com/mads890/ADVENTURE-TIME-Quiz-App">Check out my repository</a> on GitHub, or <a class="pageslink" href="https://mads890.github.io/ADVENTURE-TIME-Quiz-App/">try the live app yourself</a>!
@@ -36,11 +36,11 @@
         <h3>Logos</h3>
         <img src="hulselogo.png" alt="Orange and blue stacked letter H">
         <img src="journeytowellnesslogo.svg" alt="blue circle with waves inside. text reads 'journey to wellness'">
-        <img src="workflologo.png" alt="dark blue metallic circle with neon pink letter W and neon blue letter F">
+        <img src="workflologo.jpeg" alt="dark blue metallic circle with neon pink letter W and neon blue letter F">
         <h3>Concept Art</h3>
-        <img src="toucan.jpg" alt="geometric toucan">
-        <img src="frog.jpg" alt="geometric dart frog">
-        <img src="lemur.jpg" alt="geometric lemur">
+        <img src="toucan.jpeg" alt="geometric toucan">
+        <img src="frog.jpeg" alt="geometric dart frog">
+        <img src="lemur.jpeg" alt="geometric lemur">
       </section>
     </main>
     <footer>
