--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <h2>My Work</h2>
         <a href="/work.html" class="example">
           <h3>Web</h3>
-          <img class="exampleimage" src="quizapp.png" alt="Finn and Jake fist bumping">
+          <img class="exampleimage" src="fistBump.png" alt="Finn and Jake fist bumping">
         </a>
         <a href="/work.html" class="example">
           <h3>Illustration and Photoshop</h3>
