--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
     <footer>
         <img src="emailicon.png" alt="email icon">
         <img src="githubicon.png" alt="git hub icon">
-        <img src="nstagramicon.png" alt="instagram icon">
+        <img src="instagramicon.png" alt="instagram icon">
         <img src="linkedinicon.png" alt="linked in icon">
         <img src="phoneicon.png" alt="phone icon">
     </footer>
