--- a/index.html
+++ b/index.html
@@ -5,23 +5,54 @@
     <meta name="viewport" content="width=device-width">
     <title>Madi's Web Development Portfolio</title>
     <link href="https://fonts.googleapis.com/css?family=Gotu|Montserrat&display=swap" rel="stylesheet"/>
-    <link href="main.css" rel="stylesheet" type="text/css"/>
+    <link href="./assets/stylesheets/main.css" rel="stylesheet" type="text/css"/>
   </head>
   <body>
-    <nav class="dropdown">
-      <p class="hamburger">&#9776;</p>
-		  <section class="menu">
-        <div class="menuitems">
-			  <a href="/index.html">Home</a>
-			  <a href="/about.html">About Me</a>
-			  <a href="/work.html">My Work</a>
-			  <a href="/contact.html">Contact</a>
+
+    <header id="Header" class="header">
+      <nav class="navbar navbar--fullscreen">
+        <div class="navbar__link--fullscreen">
+          <a href="./index.html">Home</a>
         </div>
-		  </section>
-    </nav>
+        <div class="navbar__link--fullscreen">
+          <a href="./about.html">About Me</a>
+        </div>
+        <div class="navbar__link--fullscreen">
+          <a href="./work.html">My Work</a>
+        </div>
+        <div class="navbar__link--fullscreen">
+          <a href="./contact.html">Contact</a>
+        </div>
+      </nav>
+
+      <nav class="navbar navbar--mobile">
+        <div class="menu-wrapper">
+          <p class="icon--hamburger">&#9776;</p>
+          <ul class="navbar__menu">
+            <li class="menu__item">
+              <a class="item__link" href="/">Home</a>
+            </li>
+            <li class="menu__item">
+              <a class="item__link" href="./about.html">About</a>
+            </li>
+            <li class="menu__item">
+              <a class="item__link" href="./work.html">Work</a>
+            </li>
+            <li class="menu__item">
+              <a class="item__link" href="./contact.html">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+
+    </header>
+
+    <main>
+    </main>
+
     <header>
-      <img class="profilepic" src="profilepic.png" alt="Madeline Guman's face">
-      <img class="graphic" src="bubbles.jpeg" alt="pink, purple, and blue circles">
+      <img class="profilepic" src="./assets/images/profilepic.png" alt="Madeline Guman's face">
+      <img class="graphic" src="./assets/images/bubbles.jpeg" alt="pink, purple, and blue circles">
     </header>
     <main>
       <section class="bio">
@@ -32,20 +63,20 @@
         <h2>My Work</h2>
         <a href="/work.html" class="example">
           <h3>Web</h3>
-          <img class="exampleimage" src="fistBump.png" alt="Finn and Jake fist bumping">
+          <img class="exampleimage" src="./assets/images/fistBump.png" alt="Finn and Jake fist bumping">
         </a>
         <a href="/work.html" class="example">
           <h3>Illustration and Photoshop</h3>
-          <img class="exampleimage" src="toucan.jpeg" alt="geometric toucan">
+          <img class="exampleimage" src="./assets/images/toucan.jpeg" alt="geometric toucan">
         </a>
       </section>
     </main>
     <footer>
-      <img src="emailicon.png" alt="email icon">
-        <img src="githubicon.png" alt="git hub icon">
-        <img src="instagramicon.png" alt="instagram icon">
-        <img src="linkedinicon.png" alt="linked in icon">
-        <img src="phoneicon.png" alt="phone icon">
+      <img src="./assets/images/emailicon.png" alt="email icon">
+        <img src="./assets/images/githubicon.png" alt="git hub icon">
+        <img src="./assets/images/instagramicon.png" alt="instagram icon">
+        <img src="./assets/images/linkedinicon.png" alt="linked in icon">
+        <img src="./assets/images/phoneicon.png" alt="phone icon">
     </footer>
   </body>
 </html>
