fixed style issues and added icon links

--- a/contact.html
+++ b/contact.html
@@ -8,42 +8,39 @@
     <link href="main.css" rel="stylesheet" type="text/css"/>
   </head>
   <body>
-    <nav class="dropdown">
-      <p class="hamburger">&#9776;</p>
-		<section class="menu">
-        <div class="menuitems">
-			  <a href="/index.html">Home</a>
-			  <a href="/about.html">About Me</a>
-			  <a href="/work.html">My Work</a>
-			  <a href="/contact.html">Contact</a>
-        </div>
-	    </section>
+    <nav class="navbar">
+      <span class="hamburger" id="js-navbar-toggle">&#9776;</span>
+        <ul class="menu" id="js-menu">
+			  <li class="nav-link"><a href="index.html">Home</a></li>
+			  <li class="nav-link"><a href="about.html">About Me</a></liclass="nav-link">
+			  <li class="nav-link"><a href="work.html">My Work</a></li>
+			  <li class="nav-link"><a href="contact.html">Contact</a></li>
+        </ul>
     </nav>
     <header>
       <img class="profilepic" src="profilepic.png" alt="Madeline Guman's face">
       <h1><span class="contactheader">Contact Me!</span></h1>
     </header>
     <section class="contactform">
-        <h2>Send me a message!</h2>
         <form>
             <label for="name">What shall I call you?</label>
-            <input type="text" name="name" value="name" id="name" placeholder="Your name" required>
+            <input type="text" name="name" id="name" placeholder="Your name" required><br/>
             <label for="email">Where should I send my response?</label>
-            <input type="email" name="email" value="email" id="email" placeholder="Your-email@some-host.com" required>
+            <input type="email" name="email" id="email" placeholder="Your-email@some-host.com" required><br/>
             <label for="phonenumber">Would you prefer a call?</label>
-            <input type="tel" name="phonenumber" value="phonenumber" id="phonenumber" placeholder="555-555-5555">
+            <input type="tel" name="phonenumber" id="phonenumber" placeholder="555-555-5555"><br/>
             <label for="color">What is your favorite color?</label>
-            <input type="color" name="color" value="color" id="color">
+            <input type="color" name="color" id="color"><br/>
             <label for="message">Your message here!</label>
-            <input type="text" name="message" value="message" id="message" placeholder="Tell me all the things!" required>
+            <input type="text" name="message" id="message" placeholder="Tell me all the things!" required>
         </form>
     </section>
     <footer>
-        <img src="emailicon.png" alt="email icon">
-        <img src="githubicon.png" alt="git hub icon">
-        <img src="instagramicon.png" alt="instagram icon">
-        <img src="linkedinicon.png" alt="linked in icon">
-        <img src="phoneicon.png" alt="phone icon">
+        <img src="emailicon.png" alt="email icon" onclick="href='mailto:mads890@yahoo.com'">
+        <img src="githubicon.png" alt="git hub icon" onclick="location.href='https\://github.com/mads890'">
+        <img src="instagramicon.png" alt="instagram icon" onclick="location.href='https\://www.instagram.com/shortheighttribe/'">
+        <img src="linkedinicon.png" alt="linked in icon" onclick="location.href='https\://www.linkedin.com/in/madeline-guman-5b5205157/'">
+        <img src="phoneicon.png" alt="phone icon" ???>
     </footer>
   </body>
 </html>
