--- a/about.html
+++ b/about.html
@@ -8,19 +8,17 @@
     <link href="main.css" rel="stylesheet" type="text/css"/>
   </head>
   <body>
-    <nav class="dropdown">
-      <p class="hamburger">&#9776;</p>
-		  <section class="menu">
-        <div class="menuitems">
-			  <a href="/home">Home</a>
-			  <a href="/about">About Me</a>
-			  <a href="/work">My Work</a>
-			  <a href="/contact">Contact</a>
-        </div>
-		  </section>
+    <nav class="navbar">
+      <span class="hamburger" id="js-navbar-toggle">&#9776;</span>
+        <ul class="menu" id="js-menu">
+			  <li><a class="nav-link" href="index.html">Home</a></li>
+			  <li><a href="about.html" class="nav-link">About Me</a></liclass="nav-link">
+			  <li><a href="work.html" class="nav-link">My Work</a></li>
+			  <li><a href="contact.html" class="nav-link">Contact</a></li>
+        </ul>
     </nav>
     <header>
-      <img class="profilepic" src="profilepic.png" alt="Madeline Guman's face">
+      <img class="profilepic about-pro-pic" src="profilepic.png" alt="Madeline Guman's face">
       <h1><span class="aboutheader">All About Me!</span></h1>
     </header>
     <main>
@@ -29,20 +27,16 @@
         <p>Art has been a part of my life since the very beginning. Art is therapeutic. It is interactive. It is stimulating. It takes practice and discipline. Art helps me see the world differently.</p>
       </section>
       <section class="dance">
-        <img class="rightimage" src="aerialpic.jpeg" alt="Madi hanging upside down from blue silks">
+        <img class="rightimage" src="dancepic.jpeg" alt="Madi hanging upside down from blue silks">
         <p>Physical fitness is important to me! Keeping a healthy body allows for a healthy mind. Dance--another form of art in my opinion--is a form of self-expression like no other. Dance helps me relieve stress and literally keeps me on my toes so that I am at my best every day.</p>
-      </section>
-      <section class="web">
-        <img class="leftimage" src="???" alt="???">
-        <p>
       </section>
     </main>
     <footer>
-      <img src="emailicon.png" alt="email icon">
-        <img src="githubicon.png" alt="git hub icon">
-        <img src="instagramicon.png" alt="instagram icon">
-        <img src="linkedinicon.png" alt="linked in icon">
-        <img src="phoneicon.png" alt="phone icon">
+      <img src="emailicon.png" alt="email icon" onclick="href='mailto:mads890@yahoo.com'">
+      <img src="githubicon.png" alt="git hub icon" onclick="location.href='https\://github.com/mads890'">
+      <img src="instagramicon.png" alt="instagram icon" onclick="location.href='https\://www.instagram.com/shortheighttribe/'">
+      <img src="linkedinicon.png" alt="linked in icon" onclick="location.href='https\://www.linkedin.com/in/madeline-guman-5b5205157/'">
+      <img src="phoneicon.png" alt="phone icon">
     </footer>
   </body>
 </html>
