fixed index links

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
       </section>
       <section class="work">
         <h2>My Work</h2>
-        <a href="/work.html" class="example">
+        <a href="/portfolio/work.html" class="example">
           <h3>Web</h3>
           <img class="exampleimage" src="fistBump.png" alt="Finn and Jake fist bumping">
         </a>
-        <a href="/work.html" class="example">
+        <a href="/portfolio/work.html" class="example">
           <h3>Illustration and Photoshop</h3>
           <img class="exampleimage" src="toucan.jpeg" alt="geometric toucan">
         </a>
