--- a/work.html
+++ b/work.html
@@ -8,12 +8,20 @@
   </head>
   <body>
     <nav class="navbar">
-      <span class="hamburger" id="js-navbar-toggle">&#9776;</span>
-        <ul class="menu" id="js-menu">
-			  <li class="nav-link"><a href="index.html">Home</a></li>
-			  <li class="nav-link"><a href="about.html">About Me</a></liclass="nav-link">
-			  <li class="nav-link"><a href="work.html">My Work</a></li>
-			  <li class="nav-link"><a href="contact.html">Contact</a></li>
+      <span class="navbar-toggle" id="js-navbar-toggle">&#9776;</span>
+        <ul class="nav-list" id="js-menu">
+			    <li>
+            <a href="index.html" class="nav-link">Home</a>
+          </li>
+			    <li>
+            <a href="about.html" class="nav-link">About Me</a>
+          </li>
+          <li>
+            <a href="work.html" class="nav-link">My Work</a>
+          </li>
+			    <li>
+            <a href="contact.html" class="nav-link">Contact</a>
+          </li>
         </ul>
     </nav>
     <header>
@@ -23,8 +31,8 @@
     <main>
       <section class="web">
         <h2>Websites and Applications</h2>
-        <h3>Adventure Time Online Quiz</h3>
-        <img src="quizappscreencap.jpeg" alt="screencap of Adventure Time quiz application - princesses in a cage">
+        <h3>Adventure Time Quiz</h3>
+        <img class="example-image" src="quizappscreencap.jpeg" alt="screencap of Adventure Time quiz application. princesses in a cage">
         <p>This interative web application is a game in which the user must answer questions in order to rescue the princesses of Ooo, the fictional kingdom of the cartoon's universe. Upon submission, users are provided with textual and graphic feedback as well as an interactive element (a button) that allows them to move on to the next question. At the end of the quiz, there are three possible outcomes a user may achieve depending on the number of questions they got right.</p>
         <p>This project uses HTML, CSS, JavaScript, and jQuery.</p>
         <p><a class="ghlink" href="https://github.com/mads890/ADVENTURE-TIME-Quiz-App">Check out my repository</a> on GitHub, or <a class="pageslink" href="https://mads890.github.io/ADVENTURE-TIME-Quiz-App/">try the live app yourself</a>!
@@ -48,5 +56,7 @@
       <img src="linkedinicon.png" alt="linked in icon" onclick="location.href='https\://www.linkedin.com/in/madeline-guman-5b5205157/'">
       <img src="phoneicon.png" alt="phone icon">
     </footer>
+    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+    <script src="index.js"></script>
   </body>
 </html>
