--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
     <header>
       <img class="profilepic" src="profilepic.png" alt="Madeline Guman's face">
       <h1><span class="aboutheader">All About Me!</span></h1>
-      <p>I have always loved doing puzzles, and coding is the most challenging puzzle I have encountered. The prospective opportunities and technologies made possible by coding are exciting, the work is engaging, and finishing a project is exceptionally rewarding. I got into this field for fun, but I have developed a passion for the process like none other that I have found in the workplace.</p>
+      <p class="desc">I have always loved doing puzzles, and coding is the most challenging puzzle I have encountered. The prospective opportunities and technologies made possible by coding are exciting, the work is engaging, and finishing a project is exceptionally rewarding. I got into this field for fun, but I have developed a passion for the process like none other that I have found in the workplace.</p>
     </header>
     <main class="aboutmain">
       <section class="art">
