--- a/work.html
+++ b/work.html
@@ -36,7 +36,7 @@
         <p>This interative web application is a game in which the user must answer questions in order to rescue the princesses of Ooo, the fictional kingdom of the cartoon's universe. Upon submission, users are provided with textual and graphic feedback as well as an interactive element (a button) that allows them to move on to the next question. At the end of the quiz, there are three possible outcomes a user may achieve depending on the number of questions they got right.</p>
         <p>This project uses HTML, CSS, JavaScript, and jQuery.</p>
         <p><a class="ghlink" href="https://github.com/mads890/ADVENTURE-TIME-Quiz-App">Check out my repository</a> on GitHub, or <a class="pageslink" href="https://mads890.github.io/ADVENTURE-TIME-Quiz-App/">try the live app yourself</a>!
-        <h3>Pink Moon</h3>
+        <h3 class="sub-title">Pink Moon</h3>
         <img class="example-image" src="pinkmoon.png" alt="screencap of Pink Moon website.">
         <p>This is a fictional space travel agency for women. Use the Price Calculator on the Experiences page or stamp your virtual passport with planetary stickers!</p>
         <p>This project uses HTML, CSS, JavaScript, jQuery, and jQuery-UI.</p>
