--- a/work.html
+++ b/work.html
@@ -37,7 +37,7 @@
         <p>This project uses HTML, CSS, JavaScript, and jQuery.</p>
         <p><a class="ghlink" href="https://github.com/mads890/ADVENTURE-TIME-Quiz-App">Check out my repository</a> on GitHub, or <a class="pageslink" href="https://mads890.github.io/ADVENTURE-TIME-Quiz-App/">try the live app yourself</a>!
         <h3 class="sub-title">Pink Moon</h3>
-        <img class="example-image" src="pinkmoon.png" alt="screencap of Pink Moon website.">
+        <img class="example-image" src="https://uploads-ssl.webflow.com/5fa9743a4c2f0c7080541444/5fa9768e7bea66f345cacd21_pink%20moon.png" alt="screencap of Pink Moon website.">
         <p>This is a fictional space travel agency for women. Use the Price Calculator on the Experiences page or stamp your virtual passport with planetary stickers!</p>
         <p>This project uses HTML, CSS, JavaScript, jQuery, and jQuery-UI.</p>
         <p><a class="ghlink" href="https://madi-test-1.webflow.io/">Check out this website!</a>
