--- a/work.html
+++ b/work.html
@@ -39,8 +39,18 @@
         <h3 class="sub-title">Pink Moon</h3>
         <img class="example-image" src="https://uploads-ssl.webflow.com/5fa9743a4c2f0c7080541444/5fa9768e7bea66f345cacd21_pink%20moon.png" alt="screencap of Pink Moon website.">
         <p>This is a fictional space travel agency for women. Use the Price Calculator on the Experiences page or stamp your virtual passport with planetary stickers!</p>
-        <p>This project uses HTML, CSS, JavaScript, jQuery, and jQuery-UI.</p>
+        <p>This project was built using webflow and utilizes custom code to implement jQuery and jQuery-UI.</p>
         <p><a class="ghlink" href="https://madi-test-1.webflow.io/">Check out this website!</a>
+	<h3 class="sub-title">Dartfrog</h3>
+        <img class="example-image" src="dartfrogscreencap.jpeg" alt="Dartfrog text: It's a Jungle Out There.">
+        <p>A design studio with the allure of the rainforest itself.</p>
+        <p>This project was built using webflow and demonstrates custom animations and original artwork.</p>
+        <p><a class="ghlink" href="https://www.dartfrog.design/">Check out this website!</a>
+	<h3 class="sub-title">Oberman & Partners</h3>
+        <img class="example-image" src="obermanlogo.jpeg" alt="Oberman and Partners text against a yellow background.">
+        <p>Advertising never looked so good!</p>
+        <p>This project was built using webflow and demonstrates custom animations.</p>
+        <p><a class="ghlink" href="https://www.obermanpartners.com/">Check out this website!</a>
 	</section>
       <section class="graphics">
         <h2>Graphic Design</h2>
