--- a/work.html
+++ b/work.html
@@ -42,12 +42,12 @@
         <p>This project was built using webflow and utilizes custom code to implement jQuery and jQuery-UI.</p>
         <p><a class="ghlink" href="https://madi-test-1.webflow.io/">Check out this website!</a>
 	<h3 class="sub-title">Dartfrog</h3>
-        <img class="example-image" src="dartfrogscreencap.jpeg" alt="Dartfrog text: It's a Jungle Out There.">
+        <img class="example-image" src="dartfrogscreencap.png" alt="Dartfrog text: It's a Jungle Out There.">
         <p>A design studio with the allure of the rainforest itself.</p>
         <p>This project was built using webflow and demonstrates custom animations and original artwork.</p>
         <p><a class="ghlink" href="https://www.dartfrog.design/">Check out this website!</a>
 	<h3 class="sub-title">Oberman & Partners</h3>
-        <img class="example-image" src="obermanlogo.jpeg" alt="Oberman and Partners text against a yellow background.">
+        <img class="example-image" src="obermanlogo.png" alt="Oberman and Partners text against a yellow background.">
         <p>Advertising never looked so good!</p>
         <p>This project was built using webflow and demonstrates custom animations.</p>
         <p><a class="ghlink" href="https://www.obermanpartners.com/">Check out this website!</a>
